Code/syntax.output
State 30 conflicts: 2 shift/reduce
State 35 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | SID

   15 OptTag: SID
   16       | %empty

   17 Tag: SID

   18 VarDec: ID
   19       | SID
   20       | VarDec LB INT RB

   21 FunDec: ID LP VarList RP
   22       | SID LP VarList RP
   23       | ID LP RP
   24       | SID LP RP
   25       | error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | error RC

   31 StmtList: Stmt StmtList
   32         | %empty

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | RETURN SEMI
   40     | WHILE LP RP Stmt
   41     | WHILE LP error Stmt
   42     | error SEMI
   43     | error Stmt

   44 DefList: Def DefList
   45        | %empty

   46 Def: Specifier DecList SEMI
   47    | Specifier error SEMI
   48    | error Def

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | SID LP Args RP
   66    | ID LP RP
   67    | SID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | Exp DOT SID
   71    | ID
   72    | SID
   73    | INT
   74    | FLOAT
   75    | Exp ASSIGNOP error
   76    | Exp AND error
   77    | Exp OR error
   78    | Exp RELOP error
   79    | Exp PLUS error
   80    | Exp MINUS error
   81    | Exp STAR error
   82    | Exp DIV error
   83    | LP error RP
   84    | MINUS error
   85    | NOT error
   86    | Exp LB error RB
   87    | Exp DOT error

   88 Args: Exp COMMA Args
   89     | Exp
   90     | error COMMA Args


Terminals, with rules where they appear

    $end (0) 0
    error (256) 25 30 41 42 43 47 48 75 76 77 78 79 80 81 82 83 84 85 86 87 90
    INT <node> (258) 20 73
    FLOAT <node> (259) 74
    ID <node> (260) 18 21 23 64 66 69 71
    SEMI <node> (261) 4 5 7 33 35 39 42 46 47
    COMMA <node> (262) 9 26 50 88 90
    ASSIGNOP <node> (263) 52 53 75
    RELOP <node> (264) 56 78
    PLUS <node> (265) 57 79
    MINUS <node> (266) 58 62 80 84
    STAR <node> (267) 59 81
    DIV <node> (268) 60 82
    AND <node> (269) 54 76
    OR <node> (270) 55 77
    DOT <node> (271) 69 70 87
    NOT <node> (272) 63 85
    TYPE <node> (273) 10
    LP <node> (274) 21 22 23 24 36 37 38 40 41 61 64 65 66 67 83
    RP <node> (275) 21 22 23 24 25 36 37 38 40 61 64 65 66 67 83
    LB <node> (276) 20 68 86
    RB <node> (277) 20 68 86
    LC <node> (278) 12 29
    RC <node> (279) 12 29 30
    STRUCT <node> (280) 12 13
    RETURN <node> (281) 35 39
    IF <node> (282) 36 37
    ELSE <node> (283) 37
    WHILE <node> (284) 38 40 41
    SID <node> (285) 14 15 17 19 22 24 65 67 70 72
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (35)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node> (36)
        on left: 8 9
        on right: 4 9
    Specifier <node> (37)
        on left: 10 11
        on right: 4 5 6 7 28 46 47
    StructSpecifier <node> (38)
        on left: 12 13 14
        on right: 11
    OptTag <node> (39)
        on left: 15 16
        on right: 12
    Tag <node> (40)
        on left: 17
        on right: 13
    VarDec <node> (41)
        on left: 18 19 20
        on right: 8 9 20 28 51 52
    FunDec <node> (42)
        on left: 21 22 23 24 25
        on right: 6 7
    VarList <node> (43)
        on left: 26 27
        on right: 21 22 26
    ParamDec <node> (44)
        on left: 28
        on right: 26 27
    CompSt <node> (45)
        on left: 29 30
        on right: 6 34
    StmtList <node> (46)
        on left: 31 32
        on right: 29 31
    Stmt <node> (47)
        on left: 33 34 35 36 37 38 39 40 41 42 43
        on right: 31 36 37 38 40 41 43
    DefList <node> (48)
        on left: 44 45
        on right: 12 29 44
    Def <node> (49)
        on left: 46 47 48
        on right: 44 48
    DecList <node> (50)
        on left: 49 50
        on right: 46 50
    Dec <node> (51)
        on left: 51 52
        on right: 49 50
    Exp <node> (52)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
        on right: 33 35 36 37 38 52 53 54 55 56 57 58 59 60 61 62 63 68 69 70 75 76 77 78 79 80 81 82 86 87 88 89
    Args <node> (53)
        on left: 88 89 90
        on right: 64 65 88 90


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    SID  shift, and go to state 9

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 3

   14 StructSpecifier: SID .

    $default  reduce using rule 14 (StructSpecifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16
    SID    shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   15 OptTag: SID .
   17 Tag: SID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 11

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

   25 FunDec: error . RP

    RP  shift, and go to state 22


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   19 VarDec: SID .
   22 FunDec: SID . LP VarList RP
   24       | SID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 19 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 28
    SEMI   shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    RC  reduce using rule 45 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 22

   25 FunDec: error RP .

    $default  reduce using rule 25 (FunDec)


State 23

   21 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 36
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


State 24

   22 FunDec: SID LP . VarList RP
   24       | SID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 40
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 39


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID   shift, and go to state 42
    SID  shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 19


State 27

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 45


State 28

   30 CompSt: error . RC

    RC  shift, and go to state 46


State 29

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 30

   29 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    error   [reduce using rule 45 (DefList)]
    INT     reduce using rule 45 (DefList)
    FLOAT   reduce using rule 45 (DefList)
    ID      reduce using rule 45 (DefList)
    MINUS   reduce using rule 45 (DefList)
    NOT     reduce using rule 45 (DefList)
    LP      reduce using rule 45 (DefList)
    LC      reduce using rule 45 (DefList)
    RC      reduce using rule 45 (DefList)
    RETURN  reduce using rule 45 (DefList)
    IF      reduce using rule 45 (DefList)
    WHILE   reduce using rule 45 (DefList)
    SID     [reduce using rule 45 (DefList)]

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 35


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   48 Def: error . Def

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    Def              go to state 48


State 33

   46 Def: Specifier . DecList SEMI
   47    | Specifier . error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 42
    SID    shift, and go to state 43

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 34

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 35

   44 DefList: Def . DefList

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    error   [reduce using rule 45 (DefList)]
    INT     reduce using rule 45 (DefList)
    FLOAT   reduce using rule 45 (DefList)
    ID      reduce using rule 45 (DefList)
    MINUS   reduce using rule 45 (DefList)
    NOT     reduce using rule 45 (DefList)
    LP      reduce using rule 45 (DefList)
    LC      reduce using rule 45 (DefList)
    RC      reduce using rule 45 (DefList)
    RETURN  reduce using rule 45 (DefList)
    IF      reduce using rule 45 (DefList)
    WHILE   reduce using rule 45 (DefList)
    SID     [reduce using rule 45 (DefList)]

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 35


State 36

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 37

   28 ParamDec: Specifier . VarDec

    ID   shift, and go to state 42
    SID  shift, and go to state 43

    VarDec  go to state 55


State 38

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 39

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 27 (VarList)


State 40

   24 FunDec: SID LP RP .

    $default  reduce using rule 24 (FunDec)


State 41

   22 FunDec: SID LP VarList . RP

    RP  shift, and go to state 58


State 42

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 43

   19 VarDec: SID .

    $default  reduce using rule 19 (VarDec)


State 44

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 45

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 46

   30 CompSt: error RC .

    $default  reduce using rule 30 (CompSt)


State 47

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 30
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69
    SID     shift, and go to state 70

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 71
    StmtList  go to state 72
    Stmt      go to state 73
    Exp       go to state 74


State 48

   48 Def: error Def .

    $default  reduce using rule 48 (Def)


State 49

   47 Def: Specifier error . SEMI

    SEMI  shift, and go to state 75


State 50

   20 VarDec: VarDec . LB INT RB
   51 Dec: VarDec .
   52    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 76
    LB        shift, and go to state 27

    $default  reduce using rule 51 (Dec)


State 51

   46 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 77


State 52

   49 DecList: Dec .
   50        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 49 (DecList)


State 53

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 54

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


State 55

   20 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 28 (ParamDec)


State 56

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 57

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SID     shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 79
    ParamDec         go to state 39


State 58

   22 FunDec: SID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 59

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 60

   30 CompSt: error . RC
   42 Stmt: error . SEMI
   43     | error . Stmt

    error   shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    SEMI    shift, and go to state 80
    MINUS   shift, and go to state 64
    NOT     shift, and go to state 65
    LP      shift, and go to state 66
    LC      shift, and go to state 30
    RC      shift, and go to state 46
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69
    SID     shift, and go to state 70

    CompSt  go to state 71
    Stmt    go to state 81
    Exp     go to state 74


State 61

   73 Exp: INT .

    $default  reduce using rule 73 (Exp)


State 62

   74 Exp: FLOAT .

    $default  reduce using rule 74 (Exp)


State 63

   64 Exp: ID . LP Args RP
   66    | ID . LP RP
   71    | ID .

    LP  shift, and go to state 82

    $default  reduce using rule 71 (Exp)


State 64

   62 Exp: MINUS . Exp
   84    | MINUS . error
